--- a/public/pay.html
+++ b/public/pay.html
@@ -137,6 +137,7 @@
       }
 
       .quantity input {
+        height: 50px;
         border-radius: 0;
         text-align: center;
         font-size: 20px;
@@ -323,12 +324,11 @@
                     value=""
                   />
                 </div>
-
                 <div class="form-group">
                   <label for="">Amount: </label>
                   <input
                     class="form-control"
-                    type="number"
+                    type="text"
                     id="price"
                     name="amount"
                     value="2000"
@@ -361,7 +361,6 @@
         </div>
       </div>
     </section>
-    <script src="js/script.js"></script>
 
     <script type="text/javascript">
       var url = document.URL;
@@ -382,5 +381,6 @@
         document.getElementById("iphone").style.display = "block";
       }
     </script>
+    <script src="js/script.js"></script>
   </body>
 </html>
