--- a/public/pay.html
+++ b/public/pay.html
@@ -207,6 +207,7 @@
                       type="text"
                       id="quantity"
                       value="1"
+                      readonly
                     />
                     <button class="btn plus-btn" type="button">+</button>
                   </div>
@@ -277,6 +278,7 @@
                       type="text"
                       id="quantity"
                       value="1"
+                      readonly
                     />
                     <button class="btn plus-btn" type="button">+</button>
                   </div>
@@ -347,6 +349,7 @@
                       type="text"
                       id="quantity"
                       value="1"
+                      readonly
                     />
                     <button class="btn plus-btn" type="button">+</button>
                   </div>
