--- a/public/pay.html
+++ b/public/pay.html
@@ -132,9 +132,18 @@
         border-radius: 0px;
         background: #e9ecef;
       }
+
       .quantity button:hover {
         color: white;
         box-shadow: none;
+      }
+      .quantity #btn1 {
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+      }
+      .quantity #btn2 {
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
       }
 
       .quantity input {
@@ -199,7 +208,11 @@
                 <div class="form-group">
                   <label for="">Quantity</label>
                   <div class="quantity">
-                    <button class="btn minus-btn disabled" type="button">
+                    <button
+                      id="btn1"
+                      class="btn minus-btn disabled"
+                      type="button"
+                    >
                       -
                     </button>
                     <input
@@ -209,7 +222,9 @@
                       value="1"
                       readonly
                     />
-                    <button class="btn plus-btn" type="button">+</button>
+                    <button id="btn2" class="btn plus-btn" type="button">
+                      +
+                    </button>
                   </div>
                 </div>
                 <div class="form-group">
@@ -270,7 +285,11 @@
                 <div class="form-group">
                   <label for="">Quantity</label>
                   <div class="quantity">
-                    <button class="btn minus-btn disabled" type="button">
+                    <button
+                      id="btn1"
+                      class="btn minus-btn disabled"
+                      type="button"
+                    >
                       -
                     </button>
                     <input
@@ -280,7 +299,9 @@
                       value="1"
                       readonly
                     />
-                    <button class="btn plus-btn" type="button">+</button>
+                    <button id="btn2" class="btn plus-btn" type="button">
+                      +
+                    </button>
                   </div>
                 </div>
                 <div class="form-group">
@@ -341,7 +362,11 @@
                 <div class="form-group">
                   <label for="">Quantity</label>
                   <div class="quantity">
-                    <button class="btn minus-btn disabled" type="button">
+                    <button
+                      id="btn1"
+                      class="btn minus-btn disabled"
+                      type="button"
+                    >
                       -
                     </button>
                     <input
@@ -351,7 +376,9 @@
                       value="1"
                       readonly
                     />
-                    <button class="btn plus-btn" type="button">+</button>
+                    <button id="btn2" class="btn plus-btn" type="button">
+                      +
+                    </button>
                   </div>
                 </div>
                 <div class="form-group">
