Added onclick function

--- a/public/pay.html
+++ b/public/pay.html
@@ -211,6 +211,7 @@
                     <button
                       id="btn1"
                       class="btn minus-btn disabled"
+                      onclick="minus()"
                       type="button"
                     >
                       -
@@ -222,7 +223,12 @@
                       value="1"
                       readonly
                     />
-                    <button id="btn2" class="btn plus-btn" type="button">
+                    <button
+                      id="btn2"
+                      class="btn plus-btn"
+                      onclick="plus()"
+                      type="button"
+                    >
                       +
                     </button>
                   </div>
@@ -288,6 +294,7 @@
                     <button
                       id="btn1"
                       class="btn minus-btn disabled"
+                      onclick="minus()"
                       type="button"
                     >
                       -
@@ -299,7 +306,12 @@
                       value="1"
                       readonly
                     />
-                    <button id="btn2" class="btn plus-btn" type="button">
+                    <button
+                      id="btn2"
+                      class="btn plus-btn"
+                      onclick="plus()"
+                      type="button"
+                    >
                       +
                     </button>
                   </div>
@@ -365,6 +377,7 @@
                     <button
                       id="btn1"
                       class="btn minus-btn disabled"
+                      onclick="minus()"
                       type="button"
                     >
                       -
@@ -376,7 +389,12 @@
                       value="1"
                       readonly
                     />
-                    <button id="btn2" class="btn plus-btn" type="button">
+                    <button
+                      id="btn2"
+                      class="btn plus-btn"
+                      onclick="plus()"
+                      type="button"
+                    >
                       +
                     </button>
                   </div>
