--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 			 if(markerId == "fifamarker")
 			 {
 				document.getElementById("buy1").style.display = "block";
+                                setTimeout(function() {
+                                        document.getElementById("buy1").style.display = "block";
+                                },5000)
                                 document.getElementById("buy1-1").style.display = "block";
+                                setTimeout(function() {
+                                        document.getElementById("buy1-1").style.display = "block";
+                                },5000)
 				document.getElementById("buy2").style.display = "none";
 				document.getElementById("buy3").style.display = "none";
 			 }
@@ -31,7 +37,13 @@
 			 {
 				document.getElementById("buy1").style.display = "none";
 				document.getElementById("buy2").style.display = "block";
+                                setTimeout(function() {
+                                        document.getElementById("buy2").style.display = "block";
+                                },5000)
                                 document.getElementById("buy2-1").style.display = "block";
+                                setTimeout(function() {
+                                        document.getElementById("buy2-1").style.display = "block";
+                                },5000)
 				document.getElementById("buy3").style.display = "none";
 			 }
 			if(markerId == "iphonemarker")
