--- a/public/pay.html
+++ b/public/pay.html
@@ -210,7 +210,7 @@
                   <div class="quantity">
                     <button
                       id="btn1"
-                      class="btn minus-btn disabled"
+                      class="btn minus-btn1 disabled"
                       onclick="minus()"
                       type="button"
                     >
@@ -293,7 +293,7 @@
                   <div class="quantity">
                     <button
                       id="btn1"
-                      class="btn minus-btn disabled"
+                      class="btn minus-btn2 disabled"
                       onclick="minus()"
                       type="button"
                     >
@@ -376,7 +376,7 @@
                   <div class="quantity">
                     <button
                       id="btn1"
-                      class="btn minus-btn disabled"
+                      class="btn minus-btn3 disabled"
                       onclick="minus()"
                       type="button"
                     >
