--- a/index.html
+++ b/index.html
@@ -173,5 +173,14 @@
   
 	<a-entity camera></a-entity> 
     </a-scene>
+    <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                var scene = document.querySelector("a-scene");
+                var splash = document.querySelector("#splash");
+                scene.addEventListener("loaded", function (e) {
+                splash.style.display = "none";
+  });
+});
+    </script>
   </body>
 </html>
