--- a/public/pay.html
+++ b/public/pay.html
@@ -210,7 +210,7 @@
                   <div class="quantity">
                     <button
                       id="btn1"
-                      class="btn minus-btn disabled"
+                      class="btn disabled"
                       onclick="minus()"
                       type="button"
                     >
