--- a/public/pay.html
+++ b/public/pay.html
@@ -210,7 +210,7 @@
                   <div class="quantity">
                     <button
                       id="btn1"
-                      class="btn disabled"
+                      class="btn minus-btn disabled"
                       onclick="minus()"
                       type="button"
                     >
@@ -219,7 +219,7 @@
                     <input
                       class="form-control"
                       type="text"
-                      id="quantity"
+                      id="quantity1"
                       value="1"
                       readonly
                     />
@@ -294,7 +294,7 @@
                     <button
                       id="btn1"
                       class="btn minus-btn disabled"
-                      onclick="minus()"
+                      onclick="minus1()"
                       type="button"
                     >
                       -
@@ -302,14 +302,14 @@
                     <input
                       class="form-control"
                       type="text"
-                      id="quantity"
+                      id="quantity2"
                       value="1"
                       readonly
                     />
                     <button
                       id="btn2"
                       class="btn plus-btn"
-                      onclick="plus()"
+                      onclick="plus1()"
                       type="button"
                     >
                       +
@@ -377,7 +377,7 @@
                     <button
                       id="btn1"
                       class="btn minus-btn disabled"
-                      onclick="minus()"
+                      onclick="minus2()"
                       type="button"
                     >
                       -
@@ -385,14 +385,14 @@
                     <input
                       class="form-control"
                       type="text"
-                      id="quantity"
+                      id="quantity3"
                       value="1"
                       readonly
                     />
                     <button
                       id="btn2"
                       class="btn plus-btn"
-                      onclick="plus()"
+                      onclick="plus2()"
                       type="button"
                     >
                       +
