--- a/public/pay.html
+++ b/public/pay.html
@@ -199,7 +199,7 @@
                   <input
                     class="form-control"
                     type="text"
-                    id="price"
+                    id="price1"
                     name="amount"
                     value="15"
                     readonly
@@ -282,7 +282,7 @@
                   <input
                     class="form-control"
                     type="text"
-                    id="price"
+                    id="price2"
                     name="amount"
                     value="1800"
                     readonly
@@ -365,7 +365,7 @@
                   <input
                     class="form-control"
                     type="text"
-                    id="price"
+                    id="price3"
                     name="amount"
                     value="2000"
                     readonly
