--- a/index.html
+++ b/index.html
@@ -69,16 +69,33 @@
                                                 document.getElementById("buy1").style.display = "none";
                                                 document.getElementById("buy1-1").style.display = "none";},2000)
                                 }
+                                else{
+                                        document.getElementById("buy2").style.display = "none";
+                                        document.getElementById("buy2-1").style.display = "none";
+                                        document.getElementById("buy3").style.display = "none";
+                                }
                                 if(markerId=='reebokmarker'){
                                         setTimeout(function(){
                                                 document.getElementById("buy2").style.display = "none";
                                                 document.getElementById("buy2-1").style.display = "none";
                                         },2000)
                                 }
+                                else{
+                                        document.getElementById("buy1").style.display = "none";
+                                        document.getElementById("buy1-1").style.display = "none";
+                                        document.getElementById("buy3").style.display = "none";
+
+                                }
                                 if(markerId=='iphonemarker'){
                                         setTimeout(function(){
                                                 document.getElementById("buy3").style.display = "none";
                                         },2000)
+                                }
+                                else{
+                                        document.getElementById("buy1").style.display = "none";
+                                        document.getElementById("buy1-1").style.display = "none";
+                                        document.getElementById("buy2").style.display = "none";
+                                        document.getElementById("buy2-1").style.display = "none";
                                 }
                                
 			});
