--- a/public/pay.html
+++ b/public/pay.html
@@ -206,7 +206,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label for="">Quantity</label>
+                  <label for="">Quantity:</label>
                   <div class="quantity">
                     <button
                       id="btn1"
@@ -289,7 +289,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label for="">Quantity</label>
+                  <label for="">Quantity:</label>
                   <div class="quantity">
                     <button
                       id="btn1"
@@ -372,7 +372,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label for="">Quantity</label>
+                  <label for="">Quantity:</label>
                   <div class="quantity">
                     <button
                       id="btn1"
